Исправления по замечаниям с ревью